--- a/Todo
+++ b/Todo
@@ -1,1 +1,2 @@
 * Pegar icone de trofeu e colocar ao chegar alguma conquista - SVG
+* Validar campos em geral, testar todos, tipos de dados diferentes
