--- a/Todo
+++ b/Todo
@@ -5,3 +5,8 @@
 * Fazer validacao de retomada caso o usuario saida da pagina e volte, retomar progresso atual.
 * cuidado ao usar o profile como base pois os dois botoes tem tamanhos fixos
 * mudar o horario da API - Parte de CREATED - horario ta errado do Brasil
+
+
+
+* - Envie sugestao - bug - elogio - critica - para eu poder melhar -------------- IMPORTANTE CRIAR ESSE ENDPOINT
+1 - Tentar coletar infos: aparelho, nome da pessoa, etc..
