novo componente de feedback e inclusao de novo endpoint para verificar se ja possui atividades feitas

--- a/Todo
+++ b/Todo
@@ -4,9 +4,10 @@
 * fazer um interceptador generico para logar rota e demais coisas no banco do Firebase - ver o que preciso LOGAR exemplo quantos users tem no APP
 * Fazer validacao de retomada caso o usuario saida da pagina e volte, retomar progresso atual.
 * cuidado ao usar o profile como base pois os dois botoes tem tamanhos fixos
-* mudar o horario da API - Parte de CREATED - horario ta errado do Brasil
 
 
 
 * - Envie sugestao - bug - elogio - critica - para eu poder melhar -------------- IMPORTANTE CRIAR ESSE ENDPOINT
 1 - Tentar coletar infos: aparelho, nome da pessoa, etc..
+
+OBS - Ja fiz a validacao antes da prova, preciso conferir se ao realizar as ADOS setei true no localStorage
