--- a/Todo
+++ b/Todo
@@ -8,8 +8,8 @@
 * verificar se atualizei a PROP do LOCALSTORAGE -> "inProgress" para false quando ele terminar de realizar a prova
 * remover console.log de toda o app
 * cache para desempenho atual - primeiro ir no local storage se nao tiver faz req e depois que realizar alguma atividade zera o local storage
-* QUANDO O USUARIO REALIZAR A PROVA setar que ele fez a prova -> 'examDone' setar como true - ENVIAR NO Payload JUNTO - e zerar 'CompletedActivities'
-* QUANDO O USUARIO ALGUMA ATUALIZACAO NOVA ATIVIDADE OU ALTERACAO NA PROP 'performanceData' ZERAR DO LOCAL STORAGE
+* QUANDO O USUARIO REALIZAR A PROVA ---> Zerar 'CompletedActivities'
+* QUANDO O USUARIO FIZER ALGUMA ATUALIZACAO NOVA : ATIVIDADE OU ALTERACAO NA PROP 'performanceData' ZERAR DO LOCAL STORAGE
 * CRIAR mais exercicios de outros temas
 * vamos supor que ele terminou a materia e ja tem performance de prova e atividades - se ele escolher a mesma materia concluida avisar que vai substituir a nota atual ele ira recomçear de novo. - UMA OPCAO SERÁ SALVAR A CONLUSAO DA MATERIA NO LOCALSTORAGE
 
